# brightsky

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: dockerhub.yml  main.yml  tests.yml
brightsky/: __init__.py  __main__.py  cli.py  db.py  enhancements.py  export.py  parsers.py  polling.py  query.py  settings.py  tasks.py  units.py  utils.py  web.py  worker.py
brightsky/web/: __init__.py  app.py  intro.md  models.py  params.py
docs/: CNAME  brightsky.yml  index.html
docs/demo/: cities.json  index.html
docs/demo/alerts/: index.html
docs/demo/radar/: index.html  js-colormaps.js
docs/docs/: elements-web-components.min.js  index.html
docs/redirects/: external-sites.json
migrations/: 0001_migrations.sql  0002_parsed_files.sql  0003_weather.sql  0004_station_name.sql  0005_additional_weather_params.sql  0006_wmo_station_ids.sql  0007_synop.sql  0008_current_weather.sql  0009_sources_date_range.sql  0010_weather_index_performance.sql  0011_weather_condition.sql  0012_remove_legacy_recent_records.sql  0013_precipitation_probability.sql  0014_solar.sql  0015_radar.sql  0016_alerts.sql  0017_fix_ll_to_earth.sql  0018_alerts_status.sql
scripts/: benchmark.py  benchmark_compression.py  benchmark_fallback.py  benchmark_radar.py  equal_responses.py  radar_coordinates.py
tests/: conftest.py  test_db.py  test_export.py  test_parsers.py  test_polling.py  test_settings.py  test_tasks.py  test_units.py  test_utils.py  test_web.py  utils.py
tests/data/: DE1200_RV2305081330.tar.bz2  MOSMIX_S.kmz  alert_cells.json  composite_rv_20250923_0855.tar  dwd_opendata_index.html  observations_current.csv  station_list.html  synop.json.bz2
